--- a/Natours-2/config.env
+++ b/Natours-2/config.env
@@ -2,7 +2,8 @@ DATABASE_PASSWORD=allsmall
 DATABASE=mongodb+srv://aryavir7:<PASSWORD>@cluster0.ranizos.mongodb.net/natours?retryWrites=true&w=majority
 
 JWT_SECRET=my-name-is-aryavir-malik-student-of-ggsipu-and-i-am-a-good-student
-JWT_EXPIRES_IN=5d
+JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN = 90
 EMAIL_USERNAME=6793178dcedf9f
 EMAIL_PASSWORD=6d4d04d9f6c898
 EMAIL_HOST=sandbox.smtp.mailtrap.io
